--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     // Language and Environment
     "target": "ES2020",
+    "outDir": "dist",
 
     // Modules
     "module": "ESNext",
