fix: Nginx upstream to [::1]:3001

--- a/nginx.conf
+++ b/nginx.conf
@@ -41,7 +41,7 @@ map $uri $port {
     ~^/w38/   3039;
     ~^/w39/   3040;
     ~^/w40/   3041;
-    default   3000;
+    default   3001;
 }
 
 # WebSocket settings
@@ -70,7 +70,7 @@ server {
     
     # Static file handling with proper MIME types and consistent caching
     location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         
         # Include MIME types
         include /etc/nginx/mime.types;
@@ -96,7 +96,7 @@ server {
     
     # /api/public_lobbies endpoint - Cache for 1 second to handle high request volume
     location = /api/public_lobbies {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         proxy_http_version 1.1;
         
         # Cache configuration
@@ -115,7 +115,7 @@ server {
     
     # /api/env endpoint - Cache for 1 hour
     location = /api/env {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         proxy_http_version 1.1;
         
         # Cache configuration
@@ -134,7 +134,7 @@ server {
     
     # Binary files caching
     location ~* \.(bin|dat|exe|dll|so|dylib)$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         add_header Cache-Control "public, max-age=31536000, immutable";  # 1 year for binary files
         
         proxy_cache STATIC;
@@ -151,7 +151,7 @@ server {
     
     # Specific file type caching rules (outside the /static/ location)
     location ~* \.js$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         add_header Content-Type application/javascript;
         add_header Cache-Control "public, max-age=31536000, immutable";  # 1 year for JS files
         
@@ -168,7 +168,7 @@ server {
     }
     
     location ~* \.css$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         add_header Content-Type text/css;
         add_header Cache-Control "public, max-age=31536000, immutable";  # 1 year for CSS files
         
@@ -186,7 +186,7 @@ server {
     
     # Updated HTML file caching - 1 second cache
     location ~* \.html$ {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         add_header Content-Type text/html;
         add_header Cache-Control "public, max-age=1";  # 1 second for HTML files
         
@@ -204,7 +204,7 @@ server {
 
     # Root location with short Nginx cache but no browser cache
     location = / {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         
         # Tell browsers not to cache
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
@@ -231,7 +231,7 @@ server {
     
     # Default location for all other requests
     location / {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://[::1]:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
